# enterprise-agent-platform

./: .gitignore  CLAUDE.md  DECISIONS.md  FEATURES.md  Makefile  PROGRESS.md  README.md  pyproject.toml  架构.md
agent-gateway/: pyproject.toml
agent-gateway/app/: main.py
agent-gateway/app/api/: chat_api.py  session_api.py  trace_api.py
agent-gateway/app/core/: config.py  exceptions.py
agent-gateway/app/graph/: state.py  workflow.py
agent-gateway/app/graph/nodes/: human_review_node.py  intent_router_node.py  planner_node.py  rag_node.py  synthesizer_node.py  tool_executor_node.py
agent-gateway/app/llm/: model_client.py  prompts.py
agent-gateway/app/mcp_client/: mcp_client.py  server_registry.py  tool_registry.py
agent-gateway/app/memory/: message_store.py  session_memory.py
agent-gateway/app/schemas/: chat_schema.py  tool_schema.py  trace_schema.py
agent-gateway/app/tracing/: tool_call_logger.py  trace_logger.py
agent-gateway/tests/: test_api.py  test_mcp_client.py  test_workflow.py
docs/: quality.md
frontend-web/: index.html  package-lock.json  package.json  vite.config.ts
mcp-servers/knowledge-mcp-server/: README.md  pyproject.toml
mcp-servers/knowledge-mcp-server/app/: config.py  server.py
mcp-servers/knowledge-mcp-server/app/clients/: rag_service_client.py
mcp-servers/knowledge-mcp-server/app/prompts/: faq_answer_prompt.py  policy_answer_prompt.py  summarize_doc_prompt.py
mcp-servers/knowledge-mcp-server/app/resources/: faq_resource.py  policy_resource.py  sop_resource.py
mcp-servers/knowledge-mcp-server/app/schemas/: citation_schema.py  search_schema.py
mcp-servers/knowledge-mcp-server/app/tools/: citation_tool.py  document_tool.py  kb_search_tool.py
mcp-servers/knowledge-mcp-server/tests/: conftest.py  test_client.py  test_prompts.py  test_resources.py  test_tools.py
rag-service/: .gitignore  README.md  pyproject.toml
(+67 files in other folders)
