[project]
name = "agent-gateway"
version = "0.1.0"
description = "LangGraph-based agent orchestrator for the enterprise agent platform."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "rag-service",
]

[tool.uv.sources]
rag-service = { path = "../rag-service", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
