[project]
name = "knowledge-mcp-server"
version = "0.1.0"
description = "MCP server exposing RAG knowledge base tools, resources, and prompts."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.scripts]
knowledge-mcp-server = "app.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
